src/frsl/grammar/FRSLParser.java
// Generated from FRSL.g4 by ANTLR 4.8
package frsl.grammar;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class FRSLParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.8", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, USECASE=14, DESCRIPTION=15, ACTORS=16, 
		FLOWS=17, NEWLINE=18, STATEMENT=19, PHRASE=20, LETTER=21, NUMBER=22, WS=23;
	public static final int
		RULE_metaModel = 0, RULE_useCaseName = 1, RULE_useCaseDescription = 2, 
		RULE_actors = 3, RULE_precondition = 4, RULE_postcondition = 5, RULE_trigger = 6, 
		RULE_specialRequirement = 7, RULE_flows = 8, RULE_use_case_name = 9, RULE_use_case_description = 10, 
		RULE_actor_names = 11, RULE_actor_name = 12, RULE_pre_condition = 13, 
		RULE_post_condition = 14, RULE_trigger_info = 15, RULE_special_requirement = 16, 
		RULE_basicFlow = 17, RULE_alternativeFlows = 18, RULE_basicStep = 19, 
		RULE_alternativeFlow = 20, RULE_step = 21, RULE_aFlow = 22;
	private static String[] makeRuleNames() {
		return new String[] {
			"metaModel", "useCaseName", "useCaseDescription", "actors", "precondition", 
			"postcondition", "trigger", "specialRequirement", "flows", "use_case_name", 
			"use_case_description", "actor_names", "actor_name", "pre_condition", 
			"post_condition", "trigger_info", "special_requirement", "basicFlow", 
			"alternativeFlows", "basicStep", "alternativeFlow", "step", "aFlow"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'UseCase :'", "'BriefDescription :'", "'Actors :'", "'Precondition :'", 
			"'Postcondition :'", "'Trigger :'", "'SpecialRequirement :'", "','", 
			"'BasicFlow :'", "'AlternativeFlows :'", "':'", "'Step '", "'Flow '", 
			"'Use case:'", "'Brief description:'", "'Actors:'", "'Flows:'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, "USECASE", "DESCRIPTION", "ACTORS", "FLOWS", "NEWLINE", "STATEMENT", 
			"PHRASE", "LETTER", "NUMBER", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "FRSL.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public FRSLParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class MetaModelContext extends ParserRuleContext {
		public UseCaseNameContext useCaseName() {
			return getRuleContext(UseCaseNameContext.class,0);
		}
		public List<TerminalNode> NEWLINE() { return getTokens(FRSLParser.NEWLINE); }
		public TerminalNode NEWLINE(int i) {
			return getToken(FRSLParser.NEWLINE, i);
		}
		public ActorsContext actors() {
			return getRuleContext(ActorsContext.class,0);
		}
		public FlowsContext flows() {
			return getRuleContext(FlowsContext.class,0);
		}
		public UseCaseDescriptionContext useCaseDescription() {
			return getRuleContext(UseCaseDescriptionContext.class,0);
		}
		public PreconditionContext precondition() {
			return getRuleContext(PreconditionContext.class,0);
		}
		public PostconditionContext postcondition() {
			return getRuleContext(PostconditionContext.class,0);
		}
		public TriggerContext trigger() {
			return getRuleContext(TriggerContext.class,0);
		}
		public SpecialRequirementContext specialRequirement() {
			return getRuleContext(SpecialRequirementContext.class,0);
		}
		public MetaModelContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_metaModel; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FRSLListener ) ((FRSLListener)listener).enterMetaModel(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FRSLListener ) ((FRSLListener)listener).exitMetaModel(this);
		}
	}

	public final MetaModelContext metaModel() throws RecognitionException {
		MetaModelContext _localctx = new MetaModelContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_metaModel);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(46);
			useCaseName();
			setState(49);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
			case 1:
				{
				setState(47);
				match(NEWLINE);
				setState(48);
				useCaseDescription();
				}
				break;
			}
			setState(51);
			match(NEWLINE);
			setState(52);
			actors();
			setState(55);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				{
				setState(53);
				match(NEWLINE);
				setState(54);
				precondition();
				}
				break;
			}
			setState(59);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				{
				setState(57);
				match(NEWLINE);
				setState(58);
				postcondition();
				}
				break;
			}
			setState(63);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				{
				setState(61);
				match(NEWLINE);
				setState(62);
				trigger();
				}
				break;
			}
			setState(67);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				{
				setState(65);
				match(NEWLINE);
				setState(66);
				specialRequirement();
				}
				break;
			}
			setState(69);
			match(NEWLINE);
			setState(70);
			flows();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class UseCaseNameContext extends ParserRuleContext {
		public Use_case_nameContext use_case_name() {
			return getRuleContext(Use_case_nameContext.class,0);
		}
		public UseCaseNameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_useCaseName; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FRSLListener ) ((FRSLListener)listener).enterUseCaseName(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FRSLListener ) ((FRSLListener)listener).exitUseCaseName(this);
		}
	}

	public final UseCaseNameContext useCaseName() throws RecognitionException {
		UseCaseNameContext _localctx = new UseCaseNameContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_useCaseName);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(72);
			match(T__0);
			setState(73);
			use_case_name();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class UseCaseDescriptionContext extends ParserRuleContext {
		public Use_case_descriptionContext use_case_description() {
			return getRuleContext(Use_case_descriptionContext.class,0);
		}
		public UseCaseDescriptionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_useCaseDescription; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FRSLListener ) ((FRSLListener)listener).enterUseCaseDescription(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FRSLListener ) ((FRSLListener)listener).exitUseCaseDescription(this);
		}
	}

	public final UseCaseDescriptionContext useCaseDescription() throws RecognitionException {
		UseCaseDescriptionContext _localctx = new UseCaseDescriptionContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_useCaseDescription);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(75);
			match(T__1);
			setState(76);
			use_case_description();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ActorsContext extends ParserRuleContext {
		public Actor_namesContext actor_names() {
			return getRuleContext(Actor_namesContext.class,0);
		}
		public ActorsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_actors; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FRSLListener ) ((FRSLListener)listener).enterActors(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FRSLListener ) ((FRSLListener)listener).exitActors(this);
		}
	}

	public final ActorsContext actors() throws RecognitionException {
		ActorsContext _localctx = new ActorsContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_actors);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(78);
			match(T__2);
			setState(79);
			actor_names();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PreconditionContext extends ParserRuleContext {
		public Pre_conditionContext pre_condition() {
			return getRuleContext(Pre_conditionContext.class,0);
		}
		public PreconditionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_precondition; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FRSLListener ) ((FRSLListener)listener).enterPrecondition(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FRSLListener ) ((FRSLListener)listener).exitPrecondition(this);
		}
	}

	public final PreconditionContext precondition() throws RecognitionException {
		PreconditionContext _localctx = new PreconditionContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_precondition);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(81);
			match(T__3);
			setState(82);
			pre_condition();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PostconditionContext extends ParserRuleContext {
		public Post_conditionContext post_condition() {
			return getRuleContext(Post_conditionContext.class,0);
		}
		public PostconditionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_postcondition; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FRSLListener ) ((FRSLListener)listener).enterPostcondition(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FRSLListener ) ((FRSLListener)listener).exitPostcondition(this);
		}
	}

	public final PostconditionContext postcondition() throws RecognitionException {
		PostconditionContext _localctx = new PostconditionContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_postcondition);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(84);
			match(T__4);
			setState(85);
			post_condition();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TriggerContext extends ParserRuleContext {
		public Trigger_infoContext trigger_info() {
			return getRuleContext(Trigger_infoContext.class,0);
		}
		public TriggerContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_trigger; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FRSLListener ) ((FRSLListener)listener).enterTrigger(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FRSLListener ) ((FRSLListener)listener).exitTrigger(this);
		}
	}

	public final TriggerContext trigger() throws RecognitionException {
		TriggerContext _localctx = new TriggerContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_trigger);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(87);
			match(T__5);
			setState(88);
			trigger_info();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SpecialRequirementContext extends ParserRuleContext {
		public Special_requirementContext special_requirement() {
			return getRuleContext(Special_requirementContext.class,0);
		}
		public SpecialRequirementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_specialRequirement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FRSLListener ) ((FRSLListener)listener).enterSpecialRequirement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FRSLListener ) ((FRSLListener)listener).exitSpecialRequirement(this);
		}
	}

	public final SpecialRequirementContext specialRequirement() throws RecognitionException {
		SpecialRequirementContext _localctx = new SpecialRequirementContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_specialRequirement);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(90);
			match(T__6);
			setState(91);
			special_requirement();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FlowsContext extends ParserRuleContext {
		public BasicFlowContext basicFlow() {
			return getRuleContext(BasicFlowContext.class,0);
		}
		public TerminalNode NEWLINE() { return getToken(FRSLParser.NEWLINE, 0); }
		public AlternativeFlowsContext alternativeFlows() {
			return getRuleContext(AlternativeFlowsContext.class,0);
		}
		public FlowsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_flows; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FRSLListener ) ((FRSLListener)listener).enterFlows(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FRSLListener ) ((FRSLListener)listener).exitFlows(this);
		}
	}

	public final FlowsContext flows() throws RecognitionException {
		FlowsContext _localctx = new FlowsContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_flows);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(93);
			basicFlow();
			setState(96);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==NEWLINE) {
				{
				setState(94);
				match(NEWLINE);
				setState(95);
				alternativeFlows();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Use_case_nameContext extends ParserRuleContext {
		public TerminalNode PHRASE() { return getToken(FRSLParser.PHRASE, 0); }
		public Use_case_nameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_use_case_name; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FRSLListener ) ((FRSLListener)listener).enterUse_case_name(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FRSLListener ) ((FRSLListener)listener).exitUse_case_name(this);
		}
	}

	public final Use_case_nameContext use_case_name() throws RecognitionException {
		Use_case_nameContext _localctx = new Use_case_nameContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_use_case_name);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(98);
			match(PHRASE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Use_case_descriptionContext extends ParserRuleContext {
		public TerminalNode STATEMENT() { return getToken(FRSLParser.STATEMENT, 0); }
		public Use_case_descriptionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_use_case_description; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FRSLListener ) ((FRSLListener)listener).enterUse_case_description(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FRSLListener ) ((FRSLListener)listener).exitUse_case_description(this);
		}
	}

	public final Use_case_descriptionContext use_case_description() throws RecognitionException {
		Use_case_descriptionContext _localctx = new Use_case_descriptionContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_use_case_description);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(100);
			match(STATEMENT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Actor_namesContext extends ParserRuleContext {
		public List<Actor_nameContext> actor_name() {
			return getRuleContexts(Actor_nameContext.class);
		}
		public Actor_nameContext actor_name(int i) {
			return getRuleContext(Actor_nameContext.class,i);
		}
		public Actor_namesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_actor_names; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FRSLListener ) ((FRSLListener)listener).enterActor_names(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FRSLListener ) ((FRSLListener)listener).exitActor_names(this);
		}
	}

	public final Actor_namesContext actor_names() throws RecognitionException {
		Actor_namesContext _localctx = new Actor_namesContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_actor_names);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(104); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				setState(104);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case T__7:
					{
					setState(102);
					match(T__7);
					}
					break;
				case PHRASE:
					{
					setState(103);
					actor_name();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(106); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==T__7 || _la==PHRASE );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Actor_nameContext extends ParserRuleContext {
		public TerminalNode PHRASE() { return getToken(FRSLParser.PHRASE, 0); }
		public Actor_nameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_actor_name; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FRSLListener ) ((FRSLListener)listener).enterActor_name(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FRSLListener ) ((FRSLListener)listener).exitActor_name(this);
		}
	}

	public final Actor_nameContext actor_name() throws RecognitionException {
		Actor_nameContext _localctx = new Actor_nameContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_actor_name);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(108);
			match(PHRASE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Pre_conditionContext extends ParserRuleContext {
		public TerminalNode STATEMENT() { return getToken(FRSLParser.STATEMENT, 0); }
		public Pre_conditionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_pre_condition; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FRSLListener ) ((FRSLListener)listener).enterPre_condition(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FRSLListener ) ((FRSLListener)listener).exitPre_condition(this);
		}
	}

	public final Pre_conditionContext pre_condition() throws RecognitionException {
		Pre_conditionContext _localctx = new Pre_conditionContext(_ctx, getState());
		enterRule(_localctx, 26, RULE_pre_condition);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(110);
			match(STATEMENT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Post_conditionContext extends ParserRuleContext {
		public TerminalNode STATEMENT() { return getToken(FRSLParser.STATEMENT, 0); }
		public Post_conditionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_post_condition; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FRSLListener ) ((FRSLListener)listener).enterPost_condition(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FRSLListener ) ((FRSLListener)listener).exitPost_condition(this);
		}
	}

	public final Post_conditionContext post_condition() throws RecognitionException {
		Post_conditionContext _localctx = new Post_conditionContext(_ctx, getState());
		enterRule(_localctx, 28, RULE_post_condition);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(112);
			match(STATEMENT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Trigger_infoContext extends ParserRuleContext {
		public TerminalNode STATEMENT() { return getToken(FRSLParser.STATEMENT, 0); }
		public Trigger_infoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_trigger_info; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FRSLListener ) ((FRSLListener)listener).enterTrigger_info(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FRSLListener ) ((FRSLListener)listener).exitTrigger_info(this);
		}
	}

	public final Trigger_infoContext trigger_info() throws RecognitionException {
		Trigger_infoContext _localctx = new Trigger_infoContext(_ctx, getState());
		enterRule(_localctx, 30, RULE_trigger_info);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(114);
			match(STATEMENT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Special_requirementContext extends ParserRuleContext {
		public TerminalNode STATEMENT() { return getToken(FRSLParser.STATEMENT, 0); }
		public Special_requirementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_special_requirement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FRSLListener ) ((FRSLListener)listener).enterSpecial_requirement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FRSLListener ) ((FRSLListener)listener).exitSpecial_requirement(this);
		}
	}

	public final Special_requirementContext special_requirement() throws RecognitionException {
		Special_requirementContext _localctx = new Special_requirementContext(_ctx, getState());
		enterRule(_localctx, 32, RULE_special_requirement);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(116);
			match(STATEMENT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BasicFlowContext extends ParserRuleContext {
		public List<TerminalNode> NEWLINE() { return getTokens(FRSLParser.NEWLINE); }
		public TerminalNode NEWLINE(int i) {
			return getToken(FRSLParser.NEWLINE, i);
		}
		public List<BasicStepContext> basicStep() {
			return getRuleContexts(BasicStepContext.class);
		}
		public BasicStepContext basicStep(int i) {
			return getRuleContext(BasicStepContext.class,i);
		}
		public BasicFlowContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_basicFlow; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FRSLListener ) ((FRSLListener)listener).enterBasicFlow(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FRSLListener ) ((FRSLListener)listener).exitBasicFlow(this);
		}
	}

	public final BasicFlowContext basicFlow() throws RecognitionException {
		BasicFlowContext _localctx = new BasicFlowContext(_ctx, getState());
		enterRule(_localctx, 34, RULE_basicFlow);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(118);
			match(T__8);
			setState(119);
			match(NEWLINE);
			setState(122); 
			_errHandler.sync(this);
			_alt = 1;
			do {
				switch (_alt) {
				case 1:
					{
					setState(122);
					_errHandler.sync(this);
					switch (_input.LA(1)) {
					case T__11:
						{
						setState(120);
						basicStep();
						}
						break;
					case NEWLINE:
						{
						setState(121);
						match(NEWLINE);
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(124); 
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,9,_ctx);
			} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AlternativeFlowsContext extends ParserRuleContext {
		public List<TerminalNode> NEWLINE() { return getTokens(FRSLParser.NEWLINE); }
		public TerminalNode NEWLINE(int i) {
			return getToken(FRSLParser.NEWLINE, i);
		}
		public List<AlternativeFlowContext> alternativeFlow() {
			return getRuleContexts(AlternativeFlowContext.class);
		}
		public AlternativeFlowContext alternativeFlow(int i) {
			return getRuleContext(AlternativeFlowContext.class,i);
		}
		public AlternativeFlowsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_alternativeFlows; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FRSLListener ) ((FRSLListener)listener).enterAlternativeFlows(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FRSLListener ) ((FRSLListener)listener).exitAlternativeFlows(this);
		}
	}

	public final AlternativeFlowsContext alternativeFlows() throws RecognitionException {
		AlternativeFlowsContext _localctx = new AlternativeFlowsContext(_ctx, getState());
		enterRule(_localctx, 36, RULE_alternativeFlows);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(126);
			match(T__9);
			setState(127);
			match(NEWLINE);
			setState(130); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				setState(130);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case T__12:
					{
					setState(128);
					alternativeFlow();
					}
					break;
				case NEWLINE:
					{
					setState(129);
					match(NEWLINE);
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(132); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==T__12 || _la==NEWLINE );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
